fix: Comply with AGPL-3.0 by showing footer on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -74,9 +74,7 @@ body {
     }
 
     @media (max-width: 640px) {
-        aside {
-            display: none;
-        }
+        flex-direction: column;
     }
 
     section {
@@ -98,12 +96,6 @@ footer {
 
     a:hover {
         text-decoration: underline;
-    }
-}
-
-@media (max-width: 640px) {
-    footer {
-        display: none;
     }
 }
 
